--- a/master.bib
+++ b/master.bib
@@ -142,3 +142,10 @@
     YEAR="2006",
     NOTE="\url{http://en.wikipedia.org/wiki/Density\_functional\_theory}"
 }
+
+@MISC{bachelor-thesis,
+  author = {Ondřej Čertík},
+  title = {Numerical solution of the radial Dirac equation in pseudopotential   construction},
+  url = {http://www.citebase.org/abstract?id=oai:arXiv.org:0710.3408},
+  year = {2007}
+}
