--- a/master.bib
+++ b/master.bib
@@ -3,6 +3,65 @@
 @STRING(RMP="Rev. Mod. Phys.")
 @STRING(STP="J. Phys. C: Solid St. Phys.")
 @STRING(CPR="Comp. Phys. Reports")
+@STRING(JPA="J. Phys. A")
+@STRING(JCP="J. Comp. Phys.")
+
+@ARTICLE{srivastava,
+    AUTHOR="G. P. Srivastava",
+    TITLE="Broyden's method for self-consistent field convergence acceleration",
+    JOURNAL=JPA,
+    VOLUME=17,
+    YEAR=1984,
+    PAGES="L317-L321"
+}
+
+@ARTICLE{eyert,
+    AUTHOR="V. Eyert",
+    TITLE="A comparative study on methods for convergence acceleration of
+        iterative vector sequences",
+    JOURNAL=JCP,
+    VOLUME=124,
+    YEAR=1996,
+    PAGES="271-285"
+}
+
+@ARTICLE{vanderbiltlouie,
+    AUTHOR="D. Vanderbilt and S. G. Louie",
+    TITLE="Total energies of diamond (111) surface reconstructions by a linear
+        combination of atomic orbitals method",
+    JOURNAL=PRB,
+    VOLUME=30,
+    YEAR=1984,
+    NUMBER=6118
+}
+
+@ARTICLE{blochl,
+    AUTHOR="Peter E. Blochl",
+    TITLE="Generalized separable potentials for electronic-structure
+        calculations",
+    JOURNAL=PRB,
+    VOLUME=41,
+    YEAR=1990,
+    NUMBER=5414,
+}
+
+@book{elliott,
+    AUTHOR = "J. P. Elliott and P. G. Dawber",
+    TITLE = "Symmetry in Physics",
+    VOLUME = "I",
+    YEAR = 1979,
+    ADDRESS = "London",
+    PUBLISHER = "The Macmillan Press Ltd"
+}
+
+@book{DFT,
+    AUTHOR = "R. M. Dreizler and E.K.U.Gross",
+    TITLE = "Density Functional Theory",
+    YEAR = 1990,
+    PUBLISHER = "Springer-Verlag"
+}
+
+
 
 @ARTICLE{donald:apw,
     AUTHOR="A. H. MacDonald and W. E. Pickett and D. D. Koelling",
@@ -148,4 +207,12 @@
   title = {Numerical solution of the radial Dirac equation in pseudopotential   construction},
   url = {http://www.citebase.org/abstract?id=oai:arXiv.org:0710.3408},
   year = {2007}
+}
+
+@book{martin,
+    AUTHOR="Richard M. Martin",
+    TITLE="Electronic Structure: Basic Theory and Practical Methods",
+    YEAR = 2005,
+    PUBLISHER = "Cambridge University Press",
+    ISBN="0-521-78285-6"
 }
