Make citation more pretty.

--- a/master.bib
+++ b/master.bib
@@ -205,7 +205,7 @@
 @MISC{bachelor-thesis,
   author = {Ondřej Čertík},
   title = {Numerical solution of the radial Dirac equation in pseudopotential   construction},
-  url = {http://www.citebase.org/abstract?id=oai:arXiv.org:0710.3408},
+  note = "arXiv:0710.3408 [physics.atom-ph]",
   year = {2007}
 }
 
