--- a/master.bib
+++ b/master.bib
@@ -5,6 +5,7 @@
 @STRING(CPR="Comp. Phys. Reports")
 @STRING(JPA="J. Phys. A")
 @STRING(JCP="J. Comp. Phys.")
+@STRING(JMP="J. Mech. Phys. Solids")
 
 @ARTICLE{srivastava,
     AUTHOR="G. P. Srivastava",
@@ -215,4 +216,25 @@
     YEAR = 2005,
     PUBLISHER = "Cambridge University Press",
     ISBN="0-521-78285-6"
+}
+
+
+@ARTICLE{ortiz1,
+    AUTHOR="V. Gavini and J. Knap and K. Bhattacharya and M. Ortiz",
+    TITLE="Non-periodic finite-element formulation of orbital-free
+        density functional theory",
+    JOURNAL=JMP,
+    VOLUME=55,
+    YEAR=2007,
+    PAGES="669-696"
+}
+
+@ARTICLE{ortiz2,
+    AUTHOR="V. Gavini and K. Bhattacharya and M. Ortiz",
+    TITLE="Quasi-continuum orbital-free density-functional theory:
+        A route to multi-million atom non-periodic DFT calculation",
+    JOURNAL=JMP,
+    VOLUME=55,
+    YEAR=2007,
+    PAGES="697-718"
 }
