All citations fixed.

--- a/master.bib
+++ b/master.bib
@@ -238,3 +238,20 @@
     YEAR=2007,
     PAGES="697-718"
 }
+
+@ARTICLE{pask1,
+    AUTHOR="J. E. Pask and P. A. Sterne",
+    TITLE="Finite element methods in ab initio electronic structure
+        calculations",
+    JOURNAL="Modelling Simul. Mater. Sci. Eng.",
+    VOLUME=13,
+    YEAR=2005,
+}
+
+@ARTICLE{pask2,
+    AUTHOR="J. E. Pask and P. A. Sterne",
+    TITLE="Finite elements in ab initio electronic-structure calculations",
+    JOURNAL="Handbook of Materials Modeling, S. Yip (ed.)",
+    YEAR=2005,
+    PAGES="423",
+}
