--- a/motivation.tex
+++ b/motivation.tex
@@ -3,7 +3,7 @@
 Our ultimate goal is to be able to calculate large electron structure problems
 using density functional theory, pseudopotentials and finite element method.
 That's a very difficult problem, that people only very recently started to
-tackle \cite{ortiz1, ortiz2, paske}, \cite{paske}.
+tackle \cite{pask1, pask2, ortiz1, ortiz2}.
 
 In order to get there, we need to decompose the whole problem into smaller
 tasks, build robust solvers for smaller tasks and then use them like a child
