--- a/motivation.tex
+++ b/motivation.tex
@@ -38,7 +38,7 @@ and integrate over the whole volume we are interested in
 \end{equation}
 and using the vector identity 
 \begin{equation*}
-  -\left(\nabla^2\psi)\right)v=\nabla \psi\cdot \nabla v - \nabla\cdot\left((\nabla \psi)v\right),
+  -\left(\nabla^2\psi\right)v=\nabla \psi\cdot \nabla v - \nabla\cdot\left((\nabla \psi)v\right),
 \end{equation*}
 we rewrite the left hand side of (\ref{1})
 \begin{equation*}
