--- a/master.tex
+++ b/master.tex
@@ -132,9 +132,8 @@ e-mail vedoucího: vackar@fzu.cz\\
 
 \newpage
 
-\chapter{Survey of the Current State}
+\chapter{Introduction}
 
-\input theory.tex
 
 \chapter{Motivation, Tasks}
 
@@ -142,6 +141,7 @@ e-mail vedoucího: vackar@fzu.cz\\
 
 \chapter{Methods Used}
 
+\input theory.tex
 \input methods.tex
 
 \chapter{Results}
@@ -150,6 +150,7 @@ e-mail vedoucího: vackar@fzu.cz\\
 
 \chapter{Appendix}
 
+\input qft.tex
 \input appendix.tex
 
 %%% Seznam literatury
