--- a/master.tex
+++ b/master.tex
@@ -25,8 +25,8 @@
 
 %\newindex{default}{idx}{ind}{Rejstřík} % zavádí rejstřík v případě použití balíku index
 
-\title{Název práce}   % tyto dvě položky jsou zde v podstatě formálně, ve skutečnosti nejsou nikde
-\author{Jméno autora} % dále v dokumentu použity
+%\title{Název práce}   % tyto dvě položky jsou zde v podstatě formálně, ve skutečnosti nejsou nikde
+%\author{Jméno autora} % dále v dokumentu použity
 
 %\date{}
 
@@ -84,10 +84,10 @@ Institute of Theoretical Physics\\ % doplňte název katedry či ústavu
 
 \noindent I would like to thank RNDr. Jiří Vackář, CSc., for many discussions,
 enlightening a lot of issues in quantum mechanics to me and for his time
-helping me with this work. I thank to RNDr. Ondřej Šipr, CSc. for explaining
-me many theoretical problems and general advice. I very much thank Ing. Jiří
-Plešek, CSc. for moral support during my university years and during writing
-this thesis.
+helping me with this work. I thank to RNDr. Ondřej Šipr, CSc. for explaining me
+many theoretical problems and general advice. I very much thank RNDr.  Antonin
+Fejfar, CSc. and Ing. Jiří Plešek, CSc. for moral support during my university
+years and during writing of this thesis.
 
 \vspace{\fill}
 \noindent I declare that I wrote the thesis by myself and listed all used
