--- a/master.tex
+++ b/master.tex
@@ -85,7 +85,7 @@ Institute of Theoretical Physics\\ % doplňte název katedry či ústavu
 \noindent I would like to thank RNDr. Jiří Vackář, CSc., for many discussions,
 enlightening a lot of issues in quantum mechanics to me and for his time
 helping me with this work. I thank to RNDr. Ondřej Šipr, CSc. for explaining me
-many theoretical problems and general advice. I very much thank RNDr.  Antonin
+many theoretical problems and general advice. I very much thank RNDr.  Antonín
 Fejfar, CSc. and Ing. Jiří Plešek, CSc. for moral support during my university
 years and during writing of this thesis.
 
