--- a/master.tex
+++ b/master.tex
@@ -111,7 +111,14 @@ Department: Institute of Theoretical Physics\\
 Supervisor: RNDr. Jiří Vackář, CSc.\\
 Supervisor's e-mail address: vackar@fzu.cz\\
 
-\noindent Abstract: In the present work we study ... Uvede se anglický abstrakt v rozsahu 80 až 200 slov. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Ut sit amet sem. Mauris nec turpis ac sem mollis pretium. Suspendisse neque massa, suscipit id, dictum in, porta at, quam. Nunc suscipit, pede vel elementum pretium, nisl urna sodales velit, sit amet auctor elit quam id tellus. Nullam sollicitudin. Donec hendrerit. Aliquam ac nibh. Vivamus mi. Sed felis. Proin pretium elit in neque. Pellentesque at turpis. Maecenas convallis. Vestibulum id lectus. Fusce dictum augue ut nibh. Etiam non urna nec mi mattis volutpat. Curabitur in tortor at magna nonummy gravida. Mauris turpis quam, volutpat quis, porttitor ut, condimentum sit amet, felis. \\
+\noindent Abstract: In the present work we study ab-initio electronic structure
+calculations in real space using density functional theory (DFT), finite
+elements and pseudopotentials. We summarize the theory and full ab-initio
+derivation of all equations in finite elements, density functional theory and
+pseudopotentials, then we explain how our program works and we show results for
+spherically symmetric potentials in relativistic and nonrelativistic DFT and
+for 2D and 3D Schr\"odinger equation for symmetric and non-symmetric
+potentials. \\
 
 \noindent Keywords: Finite element method, Density functional theory
 
@@ -124,7 +131,9 @@ Katedra (ústav): Ústav teoretické fyziky\\
 Vedoucí bakalářské práce: RNDr. Jiří Vackář, CSc.\\
 e-mail vedoucího: vackar@fzu.cz\\
 
-\noindent Abstrakt:  V předložené práci studujeme ... Uvede se abstrakt v rozsahu 80 až 200 slov. Lorem ipsum dolor sit amet, cod lectus. Fusce dictum augue ut nibh. Etiam non urna nec mi mattis volutpat. Curabitur in tortor at magna nonummy gravida. Mauris turpis quam, volutpat quis, porttitor ut, condimentum sit amet, felis.\\
+\noindent Abstrakt:  V předložené práci studujeme ab-initio výpočty
+elektronových struktur v rámci teorie funkcionálu hustoty, konečných prvků a
+pseudopotenciálů. \\
 
 \noindent Klíčová slova: metoda konečných prvků, teorie funkcionálu hustoty
 
