SE -> Schroedinger equation expanded

--- a/theory.tex
+++ b/theory.tex
@@ -271,11 +271,15 @@ It needs to be stressed, that $E$ generally is \textbf{not} a functional of $n$ 
 
 \subsection{The Hohenberg-Kohn Theorem}
 
-The SE gives the map 
+The Schrödinger equation gives the map
 \begin{equation*}
   C: V \to \Psi
 \end{equation*}
-where $\Psi$ is the ground state. C is bijective (one-to-one correspondence), because to every $V$ we can compute the corresponding $\Psi$ from SE and two different $V$ and $V'$ (differing by more than a constant) give two different $\Psi$, because if $V$ and $V'$ gave the same $\Psi$, then by substracting 
+where $\Psi$ is the ground state. C is bijective (one-to-one correspondence),
+because to every $V$ we can compute the corresponding $\Psi$ from Schrödinger
+equation and two
+different $V$ and $V'$ (differing by more than a constant) give two different
+$\Psi$, because if $V$ and $V'$ gave the same $\Psi$, then by substracting 
 \begin{equation*}
   \hat H\ket{\Psi}=E_{gs}\ket{\Psi}
 \end{equation*}
