Nissy added to credits.

--- a/master.tex
+++ b/master.tex
@@ -87,7 +87,8 @@ enlightening a lot of issues in quantum mechanics to me and for his time
 helping me with this work. I thank to RNDr. Ondřej Šipr, CSc. for explaining me
 many theoretical problems and general advice. I very much thank RNDr.  Antonín
 Fejfar, CSc. and Ing. Jiří Plešek, CSc. for moral support during my university
-years and during writing of this thesis.
+years and during writing of this thesis. I also want to thank Nissy Nevil for
+her proofreading and encouragement.
 
 \vspace{\fill}
 \noindent I declare that I wrote the thesis by myself and listed all used
