Make the strong sentence weaker.

--- a/appendix.tex
+++ b/appendix.tex
@@ -59,7 +59,12 @@ See also (\ref{functionalderdel}) for an example of how to deal with more comple
 
 \section{Variations and functional derivatives}
 
-Functional derivatives are a common source of confusion and especially the notation. The reason is similar to the delta function --- it's due to rigid mathematicians, who refuse to use a clear and exact notation and unfortunately they are allowed to teach the basic calculus to physics students.
+Functional derivatives are a common source of confusion and especially the
+notation. The reason is similar to the delta function --- the definition is
+operational, i.e. it tells you what operations you need to do to get a
+mathematically precise formula. The notation below is commonly used in physics
+and in our opinion it is perfectly precise and exact, but some mathematicians
+may not like it.
 
 Let's have $\x=(x_1,x_2,\dots,x_N)$. The function $f(\x)$ assigns a number to each $\x$. We define a differential of $f$ as 
 \begin{equation*}
