--- a/macros.tex
+++ b/macros.tex
@@ -14,12 +14,23 @@
 \def\h{{\rm h}}
 \def\a{{\rm a}}
 
+\def\col#1#2{
+\left(\begin{array}{c}
+#1\\
+#2\\
+\end{array}\right)}
+
+\def\mat#1#2#3#4{
+\left(\begin{array}{cc}
+#1 & #2\\
+#3 & #4\\
+\end{array}\right)}
 
 %\def\back{\!\!\!\!\!\!\!\!\!\!}
 \def\back{}
-\def\col#1#2{\left(\matrix{#1#2}\right)}
+%\def\col#1#2{\left(\matrix{#1#2}\right)}
 \def\row#1#2{\left(\matrix{#1#2}\right)}
-\def\mat#1#2#3#4{\left(\matrix{#1#2#3#4}\right)}
+%\def\mat#1#2#3#4{\left(\matrix{#1#2#3#4}\right)}
 \def\matd#1#2{\left(\matrix{#1\back0\cr0\back#2}\right)}
 \def\p#1#2{{\partial#1\over\partial#2}}
 \def\cg#1#2#3#4#5#6{({#1},\,{#2},\,{#3},\,{#4}\,|\,{#5},\,{#6})}
