Czech abstract fixed.

--- a/master.tex
+++ b/master.tex
@@ -126,15 +126,19 @@ potentials. \\
 \vspace{10mm}
 
 \noindent
-Název práce: Vypočty elektronových struktur v rámci DFT v reálném prostoru\\
+Název práce: Výpočty elektronových struktur v rámci DFT v reálném prostoru\\
 Autor: Ondřej Čertík\\
 Katedra (ústav): Ústav teoretické fyziky\\
 Vedoucí bakalářské práce: RNDr. Jiří Vackář, CSc.\\
 e-mail vedoucího: vackar@fzu.cz\\
 
 \noindent Abstrakt:  V předložené práci studujeme ab-initio výpočty
-elektronových struktur v rámci teorie funkcionálu hustoty, konečných prvků a
-pseudopotenciálů. \\
+elektronových struktur v rámci teorie funkcionálu hustoty (DFT), konečných
+prvků a pseudopotenciálů. Shrneme teorii a odvození všech potřebných vztahů v
+metodě konečných prvků, teorii funkcionálu hustoty a pseudopotenciálů z prvních
+principů, pak vysvětlíme jak náš program funguje a ukážeme výsledky pro
+sféricky symetrický potenciál v relativistické i nerelativistické verzi DFT a
+2D a 3D Schrödingerovu rovnici pro symetrické a nesymetrické potenciály. \\
 
 \noindent Klíčová slova: metoda konečných prvků, teorie funkcionálu hustoty
 
