--- a/master.tex
+++ b/master.tex
@@ -148,6 +148,7 @@ sféricky symetrický potenciál v relativistické i nerelativistické verzi DFT
 
 \chapter{Introduction}
 
+\input introduction.tex
 
 \chapter{Motivation, Tasks}
 
