White space fixed.

--- a/qft.tex
+++ b/qft.tex
@@ -2,18 +2,19 @@
 
 \subsection{Electroweak Standard Model}
 
-Lagrangian with a global $SU(2)\times U(1)$ symmetry: 
+Lagrangian with a global $SU(2)\times U(1)$ symmetry:
 \begin{equation*}
   \L=i\bar L^{(l)}\gamma_\mu\partial^\mu L^{(l)}+i\bar l_R \gamma_\mu\partial^\mu l_R +\half \partial_\mu\Phi^*\partial^\mu\Phi-m^2\Phi^*\Phi-{1\over4} \lambda(\Phi^*\Phi)^2 -h_e\bar L^{(l)} \Phi e_R - \hbox{h.c.}
 \end{equation*}
-where $l=e,\mu,\tau$ and $a=1,2$, $l_{L,R} = \half (1\mp\gamma_5)l$ and 
+where $l=e,\mu,\tau$ and $a=1,2$, $l_{L,R} = \half (1\mp\gamma_5)l$ and
 \begin{equation*}
   L^{(l)} = \left( \begin{array}{c} \nu_{(l)L} \\ l_L \end{array} \right)
 \end{equation*}
 
 Local $SU(2)\times U(1)$ symmetry:
 
-This consists of two things. First changing the partial derivatives to covariant ones: 
+This consists of two things. First changing the partial derivatives to
+covariant ones:
 \begin{equation*}
   \partial^\mu \to D^\mu =\partial^\mu-{i\over2}g\tau_k A_k^\mu - {i\over2}g'YB^\mu
 \end{equation*}
