--- a/introduction.tex
+++ b/introduction.tex
@@ -1,20 +1,25 @@
-Our ultimate goal is to be able to calculate large electron structure problems
-using density functional theory, pseudopotentials and finite element method.
-That's a very difficult problem, that people only very recently started to
-tackle \cite{pask1, pask2, ortiz1, ortiz2}.
+Our ultimate goal is to develop a new code for real-space electronic structure
+calculations within density functional theory combining the advantages
+of ab-initio pseudopotentials and finite element method for calculating
+electronic states and related quantities of complex non-periodic systems.
+This complex task that people started to tackle quite recently
+\cite{pask1, pask2, ortiz1, ortiz2}
+entails a series of new partial problems to be solved.
 
-Chapter 2 contains detailed motivation.
+We describe our motivation in detail in Chapter 2.
 
-In the chapter 3 we summarize the theory and full ab-initio
-derivation of all equations in finite elements, density functional theory and
-pseudopotentials.
+The related theory and full ab-initio derivation of all the equations
+in finite elements, density functional theory and pseudopotentials
+are summarized in Chapter 3.
 
-Chapter 4 then explains how our program works and we show results for
-spherically symmetric potentials in relativistic and nonrelativistic DFT and
-for 2D and 3D Schr\"odinger equation for symmetric and non-symmetric
-potentials.
+Chapter 4 summarizes the results obtained so far within the
+present thesis, explaining how the pieces of our code works and showing
+the examples of finite-element method applications for spherically symmetric
+potentials in relativistic and nonrelativistic DFT and for 2D and 3D
+Schr\"odinger equation for symmetric and non-symmetric potentials.
 
-Finally the appendix contains a thorough derivation of relativistic equations
-form the quantum electrodynamics (QED) and the derivation of QED from the
-standard model. It also contains many other useful explanations, like delta
-functions, variations, functional derivatives, dirac notation and other things.
+Finally the appendix contains some useful derivations and explanations
+like a thorough derivation of relativistic equations form the quantum
+electrodynamics (QED) and the derivation of QED from the standard model,
+explanation of delta functions, variations, functional derivatives,
+dirac notation and more.
