Robert added to credits.

--- a/master.tex
+++ b/master.tex
@@ -88,7 +88,8 @@ helping me with this work. I thank to RNDr. Ondřej Šipr, CSc. for explaining m
 many theoretical problems and general advice. I very much thank RNDr.  Antonín
 Fejfar, CSc. and Ing. Jiří Plešek, CSc. for moral support during my university
 years and during writing of this thesis. I also want to thank Nissy Nevil for
-her proofreading and encouragement.
+her proofreading and encouragement. I thank Ing. Robert Cimrman, Ph.D.
+and sfepy (finite element package).
 
 \vspace{\fill}
 \noindent I declare that I wrote the thesis by myself and listed all used
