--- a/results.tex
+++ b/results.tex
@@ -1,3 +1,7 @@
+In this section we show results of our program. The program is opensource (BSD
+licensed) and available at \url{http://sfepy.org}, use the release 00.50.00 to
+get the exact results as below.
+
 \section{Solution of the Schr\"odinger Equation}
 
 \subsection{2D: Mesh}
