Use pdflatex instead of latex and a first mesh1.png added.

--- a/master.tex
+++ b/master.tex
@@ -50,7 +50,7 @@ Faculty of Mathematics and Physics\\
 
 \vspace{10mm}
 
-\includegraphics[scale=0.3]{logo.eps}
+\includegraphics[scale=0.3]{images/logo.pdf}
 
 \vspace{15mm}
 
