--- a/results.tex
+++ b/results.tex
@@ -4,6 +4,8 @@ get the exact results as below.
 
 \section{Solution of the Schr\"odinger Equation}
 
+The first thing we need to do is to create a mesh.
+
 \subsection{2D: Mesh}
 
 We create a mesh:
@@ -30,6 +32,8 @@ Info    : Writing 'tmp/mesh.mesh'
 Info    : Wrote 'tmp/mesh.mesh'
 Mesh written to tmp/mesh.vtk
 \end{lstlisting}
+
+\includegraphics[width=12cm]{images/mesh1.png}
 
 \subsection{2D: Potential Well}
 
