--- a/master.tex
+++ b/master.tex
@@ -84,7 +84,7 @@ Institute of Theoretical Physics\\ % doplňte název katedry či ústavu
 
 \noindent I would like to thank my supervisor RNDr. Jiří Vackář, CSc. for
 his time spent in countless discussions enlightening me a lot of issues in
-quantum mechanics and helping me with this work. I thank RNDr. Ondřej
+quantum mechanics and helping with this work. I thank RNDr. Ondřej
 Šipr, CSc. for explaining me a number of theoretical problems and general
 advice. I am deeply indebted to RNDr. Antonín Fejfar, CSc. and Ing. Jiří
 Plešek, CSc. for moral support during my university years and in the
