paraview added to citation.

--- a/master.bib
+++ b/master.bib
@@ -255,3 +255,10 @@
     YEAR=2005,
     PAGES="423",
 }
+
+@unpublished{paraview,
+    AUTHOR="Sandia National Labs and Kitware Inc and Los Alamos National Labs",
+    TITLE="ParaView: Parallel Visualization Application",
+    YEAR="2000-2008",
+    NOTE="\url{http://paraview.org}"
+}
