--- a/results.tex
+++ b/results.tex
@@ -33,7 +33,15 @@ Info    : Wrote 'tmp/mesh.mesh'
 Mesh written to tmp/mesh.vtk
 \end{lstlisting}
 
+See the fig. \ref{fig:mesh2d} for a visualization of the mesh in the paraview
+\cite{paraview}
+ how it looks like.
+
+\begin{figure}[htp]
+\centering
 \includegraphics[width=12cm]{images/mesh1.png}
+\caption{2D mesh}\label{fig:mesh2d}
+\end{figure}
 
 \subsection{2D: Potential Well}
 
