gmsh citation added.

--- a/master.bib
+++ b/master.bib
@@ -262,3 +262,11 @@
     YEAR="2000-2008",
     NOTE="\url{http://paraview.org}"
 }
+
+@unpublished{gmsh,
+    AUTHOR="Christophe Geuzaine and Jean-François Remacle",
+    TITLE="Gmsh: a three-dimensional finite element mesh generator with
+        built-in pre- and post-processing facilities",
+    YEAR="1997-2008",
+    NOTE="\url{http://www.geuz.org/gmsh}"
+}
