--- a/results.tex
+++ b/results.tex
@@ -33,9 +33,10 @@ Info    : Wrote 'tmp/mesh.mesh'
 Mesh written to tmp/mesh.vtk
 \end{lstlisting}
 
-See the fig. \ref{fig:mesh2d} for a visualization of the mesh in the paraview
-\cite{paraview}
- how it looks like.
+As you can see, we call gmsh\cite{gmsh} in the background to create a
+triangular mesh in 2D.
+See the fig. \ref{fig:mesh2d} for a visualization of the mesh in the
+paraview\cite{paraview} program.
 
 \begin{figure}[htp]
 \centering
