kitware citation fixed

--- a/master.bib
+++ b/master.bib
@@ -257,9 +257,10 @@
 }
 
 @unpublished{paraview,
-    AUTHOR="Sandia National Labs and Kitware Inc and Los Alamos National Labs",
-    TITLE="ParaView: Parallel Visualization Application",
-    YEAR="2000-2008",
+    AUTHOR="A. Henderson",
+    TITLE="ParaView Guide, A Parallel Visualization Application",
+    PUBLISHER="Kitware Inc.",
+    YEAR="2007",
     NOTE="\url{http://paraview.org}"
 }
 
