--- a/results.tex
+++ b/results.tex
@@ -35,13 +35,20 @@ Mesh written to tmp/mesh.vtk
 
 As you can see, we call gmsh\cite{gmsh} in the background to create a
 triangular mesh in 2D.
-See the fig. \ref{fig:mesh2d} for a visualization of the mesh in the
-paraview\cite{paraview} program.
+See the fig. \ref{fig:mesh2d} and \ref{fig:mesh2d2} for a visualization of the
+mesh in the paraview\cite{paraview} program.
 
 \begin{figure}[htp]
 \centering
-\includegraphics[width=12cm]{images/mesh1.png}
-\caption{2D mesh}\label{fig:mesh2d}
+%\includegraphics[width=12cm]{images/mesh1.png}
+\includegraphics[width=12cm]{images/mesh1-r.pdf}
+\caption{2D mesh, the red square is zoomed in the fig. \ref{fig:mesh2d2}}\label{fig:mesh2d}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=12cm]{images/mesh4.png}
+\caption{Zoomed in 2D mesh}\label{fig:mesh2d2}
 \end{figure}
 
 \subsection{2D: Potential Well}
