--- a/results.tex
+++ b/results.tex
@@ -338,6 +338,8 @@ Solution saved to mesh.vtk
 
 \subsection{3D: Mesh}
 
+In 3D, we generate tetrahedra:
+
 \begin{lstlisting}
 $ ./schroedinger.py --mesh
 Dimension: 3
@@ -362,6 +364,10 @@ sfepy: reading mesh (tmp/t.1.node)...
 sfepy: ...done in 1.39 s
 Mesh written to tmp/mesh.vtk
 \end{lstlisting}
+
+Look at the fig. \ref{fig:mesh3d} to see how the mesh looks like.
+
+\fig{images/mesh3d.png}{fig:mesh3d}{3D mesh}
 
 \subsection{3D: Potential Well}
 
