--- a/results.tex
+++ b/results.tex
@@ -465,7 +465,17 @@ FEM    & 14.861 & 29.833 & 44.919 & 55.035 & 60.123 & 70.305 \\
        &        & 29.836 & 44.925 & 55.047 &        & $\cdots$ \\
 \end{tabular}
 
-So we go the correct energies and correct degeneracies.
+So we got the correct energies and correct degeneracies. See the figs
+\ref{fig:well3d1} -- \ref{fig:well3d10c} for examples of eigenvalues.
+
+\fig{images/well3d1.png}{fig:well3d1}{3D potential well: eigenvalue 1, cut
+plane}
+
+\fig{images/well3d1c.png}{fig:well3d1c}{3D potential well: eigenvalue 1, cut
+plane and contours}
+
+\fig{images/well3d10c.png}{fig:well3d10c}{3D potential well: eigenvalue 10, cut
+plane and contours}
 
 \subsection{3D: Linear Harmonic Oscillator}
 
