3D osc images added.

--- a/results.tex
+++ b/results.tex
@@ -579,6 +579,21 @@ FEM    & 1.522 & 2.535 & 3.554 & 4.578 \\
        &        &       & 3.556 &   \\
 \end{tabular}
 
+For better imagination, we plotted the eigenvalue 5 from several sides and then
+eigenvalue 10, see the figs \ref{fig:osc3d5} -- \ref{fig:osc3d10}.
+
+\fig{images/osc3d5.png}{fig:osc3d5}{3D oscillator: eigenvalue 5, cut
+plane}
+
+\fig{images/osc3d5c.png}{fig:osc3d5c}{3D oscillator: eigenvalue 5, cut
+plane and countour}
+
+\fig{images/osc3d5c2.png}{fig:osc3d5c2}{3D oscillator: eigenvalue 5,
+countour}
+
+\fig{images/osc3d10.png}{fig:osc3d10}{3D oscillator: eigenvalue 10, cut
+plane and contour}
+
 \subsection{3D: Hydrogen Atom}
 
 $$V(r)=\begin{cases}-{1\over r},&\text{inside the box}\quad a\times a\times a \\
