all figures typesetted.

--- a/results.tex
+++ b/results.tex
@@ -731,10 +731,13 @@ plot}
 \fig{images/nonsym373.png}{}{2D nonsymmetric potential: eigenvalue 7, surface
 plot}
 
-%\fig{images/nonsym38.png}{}{2D nonsymmetric potential: eigenvalue 8}
+% this is needed, otherwise latex cries on the fig below.
+\clearpage
 
-%\fig{images/nonsym383.png}{}{2D nonsymmetric potential: eigenvalue 8, surface
-%plot}
+\fig{images/nonsym38.png}{}{2D nonsymmetric potential: eigenvalue 8}
+
+\fig{images/nonsym383.png}{}{2D nonsymmetric potential: eigenvalue 8, surface
+plot}
 
 \fig{images/nonsym39.png}{}{2D nonsymmetric potential: eigenvalue 9}
 
