nonsym2 images added

--- a/results.tex
+++ b/results.tex
@@ -682,7 +682,29 @@ In this example we use a potential from two nuclei positioned at $(-5, 0)$ and
 $(5, 0)$. This is a nonsymmetric problem, thus one cannot use the usual
 way to reduce the Schr\"odinger equation to radial and angular
 parts. A general partial differential equations solver (in our case FEM) has to
-be used.
+be used. See the figs \ref{fig:nonsym2-first} --
+\ref{fig:nonsym2-last}.
+
+\fig{images/nonsym20.png}{fig:nonsym2-first}{2D nonsymmetric potential I:
+eigenvalue 0}
+
+\fig{images/nonsym21.png}{}{2D nonsymmetric potential I: eigenvalue 1}
+
+\fig{images/nonsym22.png}{}{2D nonsymmetric potential I: eigenvalue 2}
+
+\fig{images/nonsym23.png}{}{2D nonsymmetric potential I: eigenvalue 3}
+
+\fig{images/nonsym24.png}{}{2D nonsymmetric potential I: eigenvalue 4}
+
+\fig{images/nonsym25.png}{}{2D nonsymmetric potential I: eigenvalue 5}
+
+\fig{images/nonsym26.png}{}{2D nonsymmetric potential I: eigenvalue 6}
+
+\fig{images/nonsym27.png}{}{2D nonsymmetric potential I: eigenvalue 7}
+
+\fig{images/nonsym28.png}{}{2D nonsymmetric potential I: eigenvalue 8}
+
+\fig{images/nonsym29.png}{fig:nonsym2-last}{2D nonsymmetric potential I: eigenvalue 9}
 
 \subsection{2D: nonsymmetric potential II}
 
@@ -690,58 +712,58 @@ In this example we use a potential from three nuclei positioned at $(-5, 0)$,
 $(5, 0)$ and $(0, 5)$. See the figs \ref{fig:nonsym-first} --
 \ref{fig:nonsym-last}.
 
-\fig{images/nonsym30.png}{fig:nonsym-first}{2D nonsymmetric potential:
+\fig{images/nonsym30.png}{fig:nonsym-first}{2D nonsymmetric potential II:
 eigenvalue 0}
 
-\fig{images/nonsym303.png}{}{2D nonsymmetric potential: eigenvalue 0, surface
+\fig{images/nonsym303.png}{}{2D nonsymmetric potential II: eigenvalue 0, surface
 plot}
 
-\fig{images/nonsym31.png}{}{2D nonsymmetric potential: eigenvalue 1}
+\fig{images/nonsym31.png}{}{2D nonsymmetric potential II: eigenvalue 1}
 
-\fig{images/nonsym313.png}{}{2D nonsymmetric potential: eigenvalue 1, surface
+\fig{images/nonsym313.png}{}{2D nonsymmetric potential II: eigenvalue 1, surface
 plot}
 
-\fig{images/nonsym32.png}{}{2D nonsymmetric potential: eigenvalue 2}
+\fig{images/nonsym32.png}{}{2D nonsymmetric potential II: eigenvalue 2}
 
-\fig{images/nonsym323.png}{}{2D nonsymmetric potential: eigenvalue 2, surface
+\fig{images/nonsym323.png}{}{2D nonsymmetric potential II: eigenvalue 2, surface
 plot}
 
-\fig{images/nonsym33.png}{}{2D nonsymmetric potential: eigenvalue 3}
+\fig{images/nonsym33.png}{}{2D nonsymmetric potential II: eigenvalue 3}
 
-\fig{images/nonsym333.png}{}{2D nonsymmetric potential: eigenvalue 3, surface
+\fig{images/nonsym333.png}{}{2D nonsymmetric potential II: eigenvalue 3, surface
 plot}
 
-\fig{images/nonsym34.png}{}{2D nonsymmetric potential: eigenvalue 4}
+\fig{images/nonsym34.png}{}{2D nonsymmetric potential II: eigenvalue 4}
 
-\fig{images/nonsym343.png}{}{2D nonsymmetric potential: eigenvalue 4, surface
+\fig{images/nonsym343.png}{}{2D nonsymmetric potential II: eigenvalue 4, surface
 plot}
 
-\fig{images/nonsym35.png}{}{2D nonsymmetric potential: eigenvalue 5}
+\fig{images/nonsym35.png}{}{2D nonsymmetric potential II: eigenvalue 5}
 
-\fig{images/nonsym353.png}{}{2D nonsymmetric potential: eigenvalue 5, surface
+\fig{images/nonsym353.png}{}{2D nonsymmetric potential II: eigenvalue 5, surface
 plot}
 
-\fig{images/nonsym36.png}{}{2D nonsymmetric potential: eigenvalue 6}
+\fig{images/nonsym36.png}{}{2D nonsymmetric potential II: eigenvalue 6}
 
-\fig{images/nonsym363.png}{}{2D nonsymmetric potential: eigenvalue 6, surface
+\fig{images/nonsym363.png}{}{2D nonsymmetric potential II: eigenvalue 6, surface
 plot}
 
-\fig{images/nonsym37.png}{}{2D nonsymmetric potential: eigenvalue 7}
+\fig{images/nonsym37.png}{}{2D nonsymmetric potential II: eigenvalue 7}
 
-\fig{images/nonsym373.png}{}{2D nonsymmetric potential: eigenvalue 7, surface
+\fig{images/nonsym373.png}{}{2D nonsymmetric potential II: eigenvalue 7, surface
 plot}
 
 % this is needed, otherwise latex cries on the fig below.
 \clearpage
 
-\fig{images/nonsym38.png}{}{2D nonsymmetric potential: eigenvalue 8}
+\fig{images/nonsym38.png}{}{2D nonsymmetric potential II: eigenvalue 8}
 
-\fig{images/nonsym383.png}{}{2D nonsymmetric potential: eigenvalue 8, surface
+\fig{images/nonsym383.png}{}{2D nonsymmetric potential II: eigenvalue 8, surface
 plot}
 
-\fig{images/nonsym39.png}{}{2D nonsymmetric potential: eigenvalue 9}
+\fig{images/nonsym39.png}{}{2D nonsymmetric potential II: eigenvalue 9}
 
-\fig{images/nonsym393.png}{fig:nonsym-last}{2D nonsymmetric potential: eigenvalue 9, surface plot}
+\fig{images/nonsym393.png}{fig:nonsym-last}{2D nonsymmetric potential II: eigenvalue 9, surface plot}
 
 \section{Density Functional Theory, Spherically Symmetric Solution}
 
