--- a/results.tex
+++ b/results.tex
@@ -765,6 +765,30 @@ plot}
 
 \fig{images/nonsym393.png}{fig:nonsym-last}{2D nonsymmetric potential II: eigenvalue 9, surface plot}
 
+\subsection{2D: nonsymmetric potential III}
+
+Finally we calculate the Schr\"odinger equation for 20 atom nuclei in a circle.
+See the figs \ref{fig:nonsym-first} --
+\ref{fig:nonsym-last}.
+
+\fig{images/nonsym40.png}{fig:nonsym-first}{2D nonsymmetric potential III:
+eigenvalue 0}
+
+\fig{images/nonsym40warp.png}{}{2D nonsymmetric potential III:
+eigenvalue 0, surface plot}
+
+\fig{images/nonsym44.png}{}{2D nonsymmetric potential III:
+eigenvalue 4}
+
+\fig{images/nonsym44warp.png}{}{2D nonsymmetric potential III:
+eigenvalue 4, surface plot}
+
+\fig{images/nonsym45.png}{}{2D nonsymmetric potential III:
+eigenvalue 5}
+
+\fig{images/nonsym45warp.png}{fig:nonsym2-first}{2D nonsymmetric potential III:
+eigenvalue 5, surface plot}
+
 \section{Density Functional Theory, Spherically Symmetric Solution}
 
 \subsection{Pb: LDA}
