Appendix is not a chapter.

--- a/master.tex
+++ b/master.tex
@@ -166,7 +166,8 @@ sféricky symetrický potenciál v relativistické i nerelativistické verzi DFT
 
 \input results.tex
 
-\chapter{Appendix}
+\chapter*{Appendix}
+\addcontentsline{toc}{chapter}{Appendix}
 
 \input qft.tex
 \input appendix.tex
