Don't include QFT things.

--- a/master.tex
+++ b/master.tex
@@ -169,7 +169,7 @@ sféricky symetrický potenciál v relativistické i nerelativistické verzi DFT
 \chapter*{Appendix}
 \addcontentsline{toc}{chapter}{Appendix}
 
-\input qft.tex
+%\input qft.tex
 \input appendix.tex
 
 %%% Seznam literatury
