Initial conclusion added.

--- a/master.tex
+++ b/master.tex
@@ -166,6 +166,10 @@ sféricky symetrický potenciál v relativistické i nerelativistické verzi DFT
 
 \input results.tex
 
+\chapter{Conclusion}
+
+\input conclusion.tex
+
 \chapter*{Appendix}
 \addcontentsline{toc}{chapter}{Appendix}
 
